@@ -251,9 +251,11 @@ tooltip =
 manpage = Type of solution for non-perpendicularity between tilt axis and beam
 axis, referred to as beam tilt:
 ^  0 for beam tilt fixed at the initial value,
-^  1 to include beam tilt as a variable in the minimization procedure,
-^  2 to perform the minimization at a series of fixed beam tilt values and
-search for the value that gives the smallest error.
+^  1 to include beam tilt as a variable in the minimization 
+^    procedure,
+^  2 to perform the minimization at a series of fixed beam tilt 
+^    values and search for the value that gives the smallest 
+^    error.
 ^Because some variables can covary with the beam tilt to give nearly equivalent
 solutions, the second option for finding the beam tilt gives more reliable
 results.  Some combinations of variable simply cannot be solved for, in
@@ -287,7 +289,8 @@ manpage = Type of rotation solution:
 ^  1 for each view having an independent rotation,
 ^  2 to enter general mapping of rotation variables,
 ^  3 or 4 for automapping of rotation variables (3 for linearly 
-^    changing values or 4 for values all the same within a group), or
+^    changing values or 4 for values all the same within a 
+^    group), or
 ^ -1 to solve for a single rotation variable.
 enum.0.tooltip = Do not solve for rotations.
 enum.1.tooltip = Solve for each rotation independently.
@@ -332,7 +335,8 @@ manpage = Type of local rotation solution:
 ^  1 for each view having an independent rotation, 
 ^  2 to enter general mapping of variables,
 ^  3 or 4 for automapping of rotation variables (3 for linearly 
-^    changing values or 4 for values all the same within a group), or
+^    changing values or 4 for values all the same within a 
+^    group), or
 ^ -1 to solve for a single rotation variable.
 
 [Field = LocalRotDefaultGrouping]
@@ -362,14 +366,16 @@ tooltip =
 manpage = Type of tilt angle solution:
 ^  0 to fix all tilt angles at their initial values,
 ^  1 to solve for all tilt angles except for a specified view,
-^  2 to solve for all tilt angles except for the view at minimum tilt, 
+^  2 to solve for all tilt angles except for the view at minimum 
+^    tilt, 
 ^  3 to solve for all tilt angles except for a specified view and 
 ^    the view at minimum tilt,
 ^  4 to specify a mapping of tilt angle variables,
-^  5 or 6 to automap groups of tilt angles (5 for linearly changing 
-^    values or 6 for values all the same within a group), or
-^  7 or 8 to automap and fix two tilt angles (7 for linearly changing 
-^    values or 8 for values all the same within a group)
+^  5 or 6 to automap groups of tilt angles (5 for linearly 
+^    changing values or 6 for values all the same within a 
+^    group), or
+^  7 or 8 to automap and fix two tilt angles (7 for linearly
+^    changing values or 8 for values all the same within a group)
 
 enum.0.tooltip = Do not solve for tilt angles.
 enum.2.tooltip = Solve for each tilt angle independently.
@@ -965,8 +971,10 @@ high residual output
 tooltip = 
 manpage = These three entries control the output of results for each local
 alignment: 
-^  1 to output the values of the parameters for each view or 0 not to;
-^  1 to output the X-Y-Z coordinates of fiducials or 0 not to; and
+^  1 to output the values of the parameters for each view or 0 
+^    not to;
+^  1 to output the X-Y-Z coordinates of fiducials or 0 not to; 
+^    and
 ^  1 to output points with high residuals, or 0 not to
 
 [SectionHeader = mappingOptions]
