@@ -10,7 +10,7 @@ setupset.copyarg.montage,Data are montaged,Bool,Y,Y,SD,,Montaged,
 setupset.copyarg.pixel,Pixel size of images in nanometers,Float,Y,Y,,Overrides value from scanHeader,Pixel size (nm),
 setupset.copyarg.gold,Size of gold beads in nanometers,Float,Y,Y,SD,,Fiducial size (nm),
 setupset.copyarg.rotation,Angle from the vertical to the tilt axis in raw images,Float,Y,Y,,Overrides value from scanHeader,Tilt axis rotation angle,
-setupset.copyarg.brotation,Angle from the vertical to the tilt axis for B axis,Float,Y,,,Overrides value from scanHeader,,
+setupset.copyarg.brotation,Angle from the vertical to the tilt axis for B axis,Float,Y,Y,,Overrides value from scanHeader,,
 setupset.copyarg.firstinc,First tilt angle and tilt angle increment,2 Float,Y,,,,First tilt angle & increment,
 setupset.copyarg.bfirstinc,First tilt angle and tilt angle increment for B axis,2 Float,Y,,,,,
 setupset.copyarg.userawtlt,Take tilt angle from a .rawtlt file for A or only axis,Bool,Y,Y,SO,,Use existing .rawtlt file,
